BUG 6029: If the Layer Options pane is too large, resize it to be smaller with a scrollbar.
QA: Retest.

To-be-

--- a/app/styles/screen-map.sass
+++ b/app/styles/screen-map.sass
@@ -36,6 +36,7 @@
     margin-right: 0.7em
     vertical-align: bottom
     width: 8.6em
+    margin-left: 4px
 
   .ui-slider-handle
     width: 1.2em
@@ -49,9 +50,13 @@
     position: relative
     top: 3px
 
+  .contentBlock
+    width: 16.8em
+
 #mapLayers li
   margin: 0.5em 0
   padding: 0.3em
+  min-width: 11.1em
 
   label
     font-size: 1.1em
